static/css/results.css
/*
File: results.css
Author: Maurice Vossen
Date: November 2021
*/


.search-div {
    color:black;
    text-decoration: none;
    background-color: var(--black);
    width: 40%;
    margin: 50px auto;
    box-sizing: border-box;
    padding: 0 20px;
    border-radius: 30px;
    border: 2px solid var(--yellow);
    overflow: hidden;
}


.search-form {
    box-sizing: border-box;
    padding: 20px 0 20px 0;
    margin: 25px;
}


.search-label {
    color: var(--yellow);
    font-size: 22px;
    letter-spacing: 1px;
    text-decoration: none;
    font-weight: 600;
    padding-left: 4px;
}


.search-p {
    font-size: 16px;
    color: var(--pink);
    margin-bottom: 8px;
    padding-left: 4px;
}


.search-textbox {
    font-size: 18px;
    padding: 6px 0 6px 16px;
    width: calc(100% - 106px);
    border: 1px solid;
    box-sizing: border-box;
    background-color: var(--gray);
    color:var(--yellow);
    outline: 0;
}


.search-button {
    width: 80px;
    font-size: 18px;
    padding: 5px 10px;
    border-radius: 5px;
    border: 1px solid;
    background-color: transparent;
    color: var(--yellow);
    cursor: pointer;
    box-sizing: border-box;
    margin-left: 20px;
}


.search-button:hover {
    box-shadow: 
    0 0 5px rgb(255, 165, 55),
    0 0 10px rgb(251, 213, 168);
    text-shadow: 
    0 0 5px rgb(255, 165, 55),
    0 0 10px rgb(251, 213, 168);
}


.number-results-div {
    color: var(--pink);
    box-sizing: border-box;
    padding: 5px 25px;
    font-size: 18px;
    float: left;
    width: 50%;
    text-align: right;
}


.results-div {
    color: var(--pink);
    box-sizing: border-box;
    padding: 5px 25px;
    font-size: 18px;
    float: left;
    width: 50%;
    text-align: left;
}


.search-results {
    float: left;
    color: var(--white);
    font-size: 18px;
    box-sizing: border-box;
    padding: 0 20px;
    margin: 5px 0;
    overflow: hidden;
    margin-bottom: 30px;
}


.song-info-desc {
    padding: 4px;
    font-size: 16px;
    font-weight: 400;
    box-sizing: border-box;
    float: left;
    width: 175px;
    color: var(--white);
    white-space: nowrap;
    text-overflow: ellipsis;
    overflow: hidden;
}


.song-info-value {
    padding: 4px;
    font-size: 16px;
    font-weight: 300;
    box-sizing: border-box;
    float: left;
    width: calc(100% - 175px);
    color: var(--white);
    white-space: nowrap;
    text-overflow: ellipsis;
    overflow: hidden;
}


.song-info-value > a {
    color:var(--pink);
    font-size: 16px;
    font-weight: 300;
    box-sizing: border-box;
    float: left;
    width: calc(100% - 175px);
    text-overflow: ellipsis;
    white-space: nowrap;
}


.album-image {
    float: left;
    width: 160px;
    box-sizing: border-box;
    padding: 5px 0;
    vertical-align: bottom;
    overflow: hidden;
}


.image-frame img {
    width: 100%;
    vertical-align: bottom;
    border-radius: 10px;
    font-size: 16px;
    text-decoration: none;
    border: 2px solid rgba(10, 10, 10, 0.9);
    box-sizing: border-box;
}


.song-title-bar {
    width: 100%;
    box-sizing: border-box;
    padding: 5px 10px;
    border: 1px solid;
    margin-bottom: 20px;
    float: left;
    font-size: 18px;
    border-radius: 10px;
    color:var(--yellow);
    white-space: nowrap;
    text-overflow: ellipsis;
    overflow: hidden;
}


.more-info-button {
    box-sizing: border-box;
    padding: 5px 10px;
    margin-bottom: 10px;
    border-top-right-radius: 10px;
    border-bottom-right-radius: 10px;
    width: 50px;
    text-align: center;
    float: left;
    cursor: pointer;
    font-size: 18px;
    color:var(--yellow);
    font-weight: 200;
}


.more-info-button i {
    font-size: 16px;
    font-weight: 200;
}


.song-div {
    float: left;
    width: calc(100% - 160px);
    box-sizing: border-box;
    padding: 0 20px;
}


.youtube-link {
    color:var(--yellow);
    font-size: 20px;
    text-decoration: none;
    font-weight: 200;
}


.admin-icon {
    margin-top: 5px;
    float: right;
    color:var(--yellow);
    font-size: 18px;
    padding: 0 5px;
    font-weight: 200;
}


.expand-info {
    margin-top: 5px;
    float: right;
    font-size: 18px;
    cursor: pointer;
}


.delete-song-check {
    cursor: pointer;
}


.delete-link {
    margin-top: 5px;
    float: right;
    color: red;
    font-size: 18px;
    padding: 0 5px;
    font-weight: 200;
}


.hr-pagination {
    margin: 10px 0;
    color: var(--pink);
    border-color: var(--pink);
    background-color: var(--pink);
}


#pagination-links {
    float: left;
    box-sizing: border-box;
    padding: 20px;
    text-align: center;
    color: var(--white);
    font-size: 20px;
    width: 100%;
}


#pagination-links > a {
    color: var(--pink);
    text-align: center;
    text-decoration: none;
}


#separator {
    color: var(--pink);
}


/* media queries for results.html only */
/* for tablets and phones */

@media only screen and (max-width: 1600px) {

    .search-div {
        width: 60%;
    }

}


@media only screen and (max-width: 1100px) {
    
    .search-div {
        width: calc(80% - 20px) !important;
    }
}


@media only screen and (max-width: 700px) {

    .search-div {
        border: 0;
        border-radius: 0;
        padding: 0 !important;
        width: 100% !important;
        margin: 0px auto !important;
        /*background-color: var(--black);*/
    }


    #transition-div {
        display: none;
    }


    .search-form {
        margin: 0 25px;
        padding: 0;
    }


    .search-textbox {
        width: 100%;
        margin-bottom: 20px;
    }


    .search-button {
        margin-left: 0;
    }


    .youtube-link {
        float: left;
        font-weight: 100;
    }


    .search-icon {
        float: left;
        clear: left;
        font-size: 30px;
        font-weight: 100;
    }


    .admin-icon, .delete-link {
        float: left;
        font-size: 30px;
        font-weight: 100;
    }


    .song-title-bar {
        border: 0;
        white-space: normal;
        text-overflow: unset;
    }


    .song-title-bar > a{
        font-size: 22px;
    }


    .number-results-div {
        float: left;
        clear: left;
        text-align: left;
        width: 100%;
        padding: 0 0 0 30px;
    }


    .results-div {
        float: left;
        width: 100%;
        padding: 0 0 0 30px;
    }

    .album-image {
        width: 100%;
        float: left;
        margin-bottom: 30px;
        overflow: hidden;
    }

    
    .image-frame img{
        width: 100%;
    }


    .song-div {
        float: left;
        clear: left;
        width: 100%;
        padding: 0 10px;
    }


    .song-info-desc {
        float: left;
        width: 100%;
        font-size: 18px;
        padding: 0;
    }


    .song-info-value {
        width: 100%;
        float: left;
        clear: left;
        font-size: 18px;
        margin-bottom: 15px;
        padding: 0;
    }

    .song-info-value > a{
        font-size: 18px;
    }

    #pagination-links {
        width: 100%;
    }


    footer {
        float: left;
        width: 100%;
    }

}

